--- a/tip-calculator-app-main/styles/styles.css
+++ b/tip-calculator-app-main/styles/styles.css
@@ -13,6 +13,13 @@ body {
   height: 100%;
 }
 
+@media screen and (min-width: 1440px) {
+  html,
+  body {
+    height: 0;
+  }
+}
+
 body {
   background-color: #c5e4e7;
 }
@@ -28,11 +35,32 @@ body .app-name {
   margin: 40px 0;
 }
 
+@media screen and (min-width: 1440px) {
+  body .app-name {
+    margin: 70px 0;
+  }
+}
+
 .main-content {
   background-color: white;
-  height: 100%;
   border-radius: 20px;
   padding: 10%;
+}
+
+@media screen and (min-width: 1440px) {
+  .main-content {
+    width: 70%;
+    height: 450px;
+    margin: 0 auto;
+    padding: 60px;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-content form {
+    width: 50%;
+  }
 }
 
 .main-content form label {
@@ -74,10 +102,18 @@ body .app-name {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: row;
-      -ms-flex-pack: row;
-          justify-content: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   list-style: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .main-content ul {
+    width: 50%;
+    float: left;
+  }
 }
 
 .main-content ul li {
@@ -86,6 +122,16 @@ body .app-name {
       flex-basis: 45%;
   text-align: center;
   margin: 10px 10px 10px 0;
+}
+
+@media screen and (min-width: 1440px) {
+  .main-content ul li {
+    -ms-flex-preferred-size: 25%;
+        flex-basis: 25%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 
 .main-content ul a {
@@ -100,6 +146,10 @@ body .app-name {
   font-weight: 700;
 }
 
+.main-content ul a:focus {
+  background-color: #26c0ab;
+}
+
 .main-content #custom {
   display: block;
   width: 100%;
@@ -111,5 +161,102 @@ body .app-name {
   border: none;
   font-weight: 700;
   font-size: 15px;
+}
+
+.main-content .tip-blk {
+  background-color: #00494d;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 1440px) {
+  .main-content .tip-blk {
+    width: 40%;
+    margin-right: auto;
+    position: absolute;
+    top: 10%;
+    left: 55%;
+    height: 360px;
+    padding: 40px;
+  }
+}
+
+.main-content .tip-blk .tip-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 50%;
+  height: 50px;
+}
+
+.main-content .tip-blk .total-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 50%;
+  height: 50px;
+}
+
+.main-content .tip-blk .total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 50%;
+  height: 50px;
+  float: right;
+  width: 50%;
+  color: #26c0ab;
+  font-size: 24px;
+  text-align: right;
+  font-weight: 700;
+}
+
+.main-content .tip-blk h1 {
+  color: white;
+  font-weight: 500;
+}
+
+.main-content .tip-blk p {
+  color: #c5e4e7;
+  font-size: 12px;
+}
+
+.main-content .tip-blk a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  background-color: #26c0ab;
+  border-radius: 5px;
+  margin-top: 10px;
+  font-size: 15px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #00494d;
+}
+
+@media screen and (min-width: 1440px) {
+  .main-content .tip-blk a {
+    margin-top: 150px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
