--- a/tip-calculator-app-main/styles/styles.scss
+++ b/tip-calculator-app-main/styles/styles.scss
@@ -159,7 +159,7 @@ body {
         width: 100%;
         height: 100%;
         padding: 10px;
-        text-align: center;
+        text-align: right;
         border-radius: 5px;
         background-color: $form;
         border: none;
@@ -185,6 +185,11 @@ body {
 
         .tip-col {
             @include flex-col;
+
+            @media screen and (min-width: 1440px) {
+                height: 80px;
+            }
+
         }
 
         .total-col {
@@ -226,7 +231,7 @@ body {
             color: $lstitms;
 
             @media screen and (min-width: 1440px) {
-                margin-top: 150px;
+                margin-top: 120px;
             }  
         }
     }
