--- a/tip-calculator-app-main/styles/styles.scss
+++ b/tip-calculator-app-main/styles/styles.scss
@@ -123,7 +123,12 @@ body {
         font-size: $maintxt;
         text-align: center;
         position: absolute;
-        left: 400px;
+        left: 100px;
+        visibility: hidden;
+
+        @media screen and (max-width: 1440px) {
+            left: 50%;
+         }
     }
 
     .error-ppl {
@@ -132,8 +137,18 @@ body {
         font-size: $maintxt;
         text-align: center;
         position: absolute;
-        left: 400px;
+        left: 35%;
         bottom: 124px;
+        visibility: hidden;
+
+        @media screen and (max-width: 1440px) {
+            left: 60%;
+            bottom: 411px;
+         }
+    }
+
+    .visibility {
+        visibility: visible;
     }
 
     ul {
@@ -252,6 +267,16 @@ body {
             @media screen and (min-width: 1440px) {
                 margin-top: 120px;
             }  
+        }
+
+        .reset {
+            background-color: gray;
+            cursor: default;
+        }
+
+        .btn-color {
+            background-color: $clicked;
+            cursor: pointer;
         }
     }
 
