--- a/tip-calculator-app-main/styles/styles.css
+++ b/tip-calculator-app-main/styles/styles.css
@@ -63,6 +63,47 @@ body .app-name {
   }
 }
 
+.main-content form .input-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main-content form .error {
+  font-weight: 700;
+  color: red;
+  font-size: 14px;
+  visibility: hidden;
+}
+
+@media screen and (max-width: 1440px) {
+  .main-content form .error {
+    left: 50%;
+  }
+}
+
+.main-content form .error-ppl {
+  font-weight: 700;
+  color: red;
+  font-size: 14px;
+  text-align: center;
+  visibility: hidden;
+}
+
+@media screen and (max-width: 1440px) {
+  .main-content form .error-ppl {
+    left: 60%;
+    bottom: 411px;
+  }
+}
+
+.main-content form .visibility {
+  visibility: visible;
+}
+
 .main-content form label {
   font-size: 14px;
   font-weight: 700;
@@ -96,44 +137,6 @@ body .app-name {
   font-size: 14px;
 }
 
-.main-content .error {
-  font-weight: 700;
-  color: red;
-  font-size: 14px;
-  text-align: center;
-  position: absolute;
-  left: 100px;
-  visibility: hidden;
-}
-
-@media screen and (max-width: 1440px) {
-  .main-content .error {
-    left: 50%;
-  }
-}
-
-.main-content .error-ppl {
-  font-weight: 700;
-  color: red;
-  font-size: 14px;
-  text-align: center;
-  position: absolute;
-  left: 35%;
-  bottom: 124px;
-  visibility: hidden;
-}
-
-@media screen and (max-width: 1440px) {
-  .main-content .error-ppl {
-    left: 60%;
-    bottom: 411px;
-  }
-}
-
-.main-content .visibility {
-  visibility: visible;
-}
-
 .main-content ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -150,7 +153,6 @@ body .app-name {
 @media screen and (min-width: 1440px) {
   .main-content ul {
     width: 50%;
-    float: left;
   }
 }
 
