--- a/tip-calculator-app-main/styles/styles.scss
+++ b/tip-calculator-app-main/styles/styles.scss
@@ -77,7 +77,43 @@ body {
 
         @media screen and (min-width: 1440px) {
             width: 50%;
-         }
+        }
+
+        .input-flex {
+            display: flex;
+            justify-content: space-between;
+        }
+
+
+        // h2 after error message
+        .error {
+            font-weight: 700;
+            color: red;
+            font-size: $maintxt;
+            visibility: hidden;
+
+            @media screen and (max-width: 1440px) {
+                left: 50%;
+            }
+        }
+
+        .error-ppl {
+            font-weight: 700;
+            color: red;
+            font-size: $maintxt;
+            text-align: center;
+
+            visibility: hidden;
+    
+            @media screen and (max-width: 1440px) {
+                left: 60%;
+                bottom: 411px;
+             }
+        }
+
+        .visibility {
+            visibility: visible;
+        }
 
         label {
             font-size: $maintxt;
@@ -116,48 +152,12 @@ body {
         font-size: $maintxt;
     }
 
-    // h2 after error message
-    .error {
-        font-weight: 700;
-        color: red;
-        font-size: $maintxt;
-        text-align: center;
-        position: absolute;
-        left: 100px;
-        visibility: hidden;
-
-        @media screen and (max-width: 1440px) {
-            left: 50%;
-         }
-    }
-
-    .error-ppl {
-        font-weight: 700;
-        color: red;
-        font-size: $maintxt;
-        text-align: center;
-        position: absolute;
-        left: 35%;
-        bottom: 124px;
-        visibility: hidden;
-
-        @media screen and (max-width: 1440px) {
-            left: 60%;
-            bottom: 411px;
-         }
-    }
-
-    .visibility {
-        visibility: visible;
-    }
-
     ul {
         @include flex;
         list-style: none;
 
         @media screen and (min-width: 1440px) {
             width: 50%;
-            float: left;
          }
 
         li {
